--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "to-do-app"]
 	path = to-do-app
 	url = https://github.com/zhpinkman/to-do-app
+[submodule "data-science-michigan"]
+	path = data-science-michigan
+	url = https://github.com/zhpinkman/data-science-michigan
